Bug 855712 - Remove trailing whitespaces in image/src/*cpp. r=jmuizelaar