image/src/imgRequestProxy.h
@@ -40,8 +40,8 @@ class Image;
 } // namespace image
 } // namespace mozilla
 
-class imgRequestProxy : public imgIRequest, 
-                        public nsISupportsPriority, 
+class imgRequestProxy : public imgIRequest,
+                        public nsISupportsPriority,
                         public nsISecurityInfoProvider,
                         public nsITimedChannel
 {
